--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p><em>Code your answer in <code>main.js</code></em></p>
       <p><button>Push Me</button></p>
       <div class="answer-box">
-         <input type="text">
+         <input class="text" type="text">
          <p class="flash-message"><!--Validation message here--></p>
       </div>
     </div>
@@ -108,7 +108,7 @@
     <div class="content-box student-workspace">
       <h4>Your Work</h4>
       <p><em>Code your answer in <code>main.js</code>. <br/><br/> When adding to the list, you will need to create an <code>&lt;li class="item"&gt;</code > element that contains both the text from the input and that also contains a <code>&lt;button class='remove'&gt;</code>.</em></p>
-      <div class="answer-box">
+      <div class="answer-box1">
         <input type="text">
         <h3>Items List</h3>
         <ul class="guest-list"></ul>
